--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-paginate": "^8.1.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.4",
     "react-slick": "^0.29.0",
