--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "alertifyjs": "^1.13.1",
     "antd": "^4.23.2",
+    "apexcharts": "^3.36.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "emailjs": "^4.0.1",
@@ -27,6 +28,7 @@
     "numeral": "^2.0.6",
     "query-string": "^7.1.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "react-paginate": "^8.1.4",
