--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-paginate": "^8.1.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.7.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.5.5",
     "react-toastify": "^9.0.7",
@@ -43,6 +44,7 @@
     "sass": "^1.53.0",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.4",
     "sweetalert2": "^11.4.24",
     "swr": "^1.3.0"
   },
