--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.41.0",
@@ -37,6 +38,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.7.0",
     "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.2.0",
     "react-spring": "^9.5.5",
     "react-toastify": "^9.0.7",
     "redux-persist": "^6.0.0",
