--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.41.0",
+    "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.4",
